# mujoco-ur-arm-rl

./: .gitignore  README.md  concepts.md  package.xml  setup.cfg  setup.py  train_2arm_live.py  train_dual_arm_live.py
envs/: __init__.py  shared_arm_env.py  ur_dual_arm_env.py  ur_gazebo_single_arm_env.py  ur_pick_place_env.py  ur_reach_env.py
launch/: gazebo_shared_arm_policy.launch.py  ur_policy.launch.py
mujoco_ur_rl_ros2/: shared_arm_policy_node.py  ur_policy_node.py
ros2/: ur_policy_node.py
scripts/train/: play_shared_arm.py  train_2arm_live.py  train_dual_arm_live.py  train_gazebo_single_arm.py  train_shared_arm.py
ur_gazebo/launch/: full_demo.launch.py  ur.gazebo.launch.py
ur_gazebo/worlds/: colored_blocks.world
ur_rl_moveit_config/: CMakeLists.txt  package.xml
ur_rl_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  sensors_3d.yaml  ur.ros2_control.xacro  ur.urdf  ur.urdf.xacro
ur_rl_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
